---
source: packages/parser/tests/literals.rs
expression: literals
input_file: packages/parser/tests/fixtures/heredoc_string_literals.php
---
- name: Basic heredoc string with double quotes
  content: "<<<\"EOD\"\nThis is a basic heredoc string.\nIt can span multiple lines.\nEOD"
  line: 4
  length: 72
- name: Basic heredoc string without double quotes
  content: "<<<EOD\nThis is a basic heredoc string.\nIt can span multiple lines.\nEOD"
  line: 10
  length: 70
- name: Heredoc with interpolated variables
  content: "<<<EOD\nHello, $name!\nVariables are not interpolated in heredoc strings.\nEOD"
  line: 16
  length: 75
- name: Heredoc with quotes and special characters
  content: "<<<EOD\nHeredoc strings can contain \"double quotes\" and 'single quotes'.\nSpecial characters like \\n \\t are treated literally.\nEOD"
  line: 22
  length: 128
- name: Heredoc with HTML
  content: "<<<HTML_CODE\n<div class=\"example\">\n    <p>This is an HTML snippet in a heredoc string.</p>\n</div>\nHTML_CODE"
  line: 28
  length: 107
- name: Heredoc with indentation (preserves whitespace)
  content: "<<<PHP_CODE\n    function example() {\n        echo \"This code block preserves indentation\";\n    }\nPHP_CODE"
  line: 35
  length: 105
- name: Empty heredoc string
  content: "<<<EMPTY\nEMPTY"
  line: 42
  length: 14
- name: Heredoc containing PHP code
  content: "<<<PHP_SCRIPT\n<?php\n$array = [1, 2, 3];\nforeach ($array as $value) {\n    echo $value;\n}\n?>\nPHP_SCRIPT"
  line: 46
  length: 101
